# CameraCalibrationTools

./: calibration_tools.py
Calibrate_Mono/: settings.xml
Calibrate_Mono/src/: CMakeLists.txt  cv_camera_calib.cpp  cv_camera_calib.h  main.cpp
Calibrate_Stereo/: right_calibration.xml  stereo_calibration.xml
Calibrate_Stereo/captures/: Thumbs.db
Calibrate_Stereo/src/: main.cpp
Capture with Poses/: WebcamDRB.rom
Capture with Poses/src/: CMakeLists.txt  main.cpp
Capture with Poses/src/src_for_matrox/: CMakeLists.txt  main.cpp  opencv_internals.cpp  video_source_wrapper.h
Capture with US/src_for_matrox/: CMakeLists.txt  main.cpp  opencv_internals.h  video_source_wrapper.cpp
Capture_Video/: Thumbs.db
Capture_Video/src/: CMakeLists.txt  main.cpp
Read_Split_Save_Video/: Thumbs.db
Read_Split_Save_Video/08052015/src/: CMakeLists.txt  cv_includes.h  main.cpp  offlineVideo.cpp
Read_Split_Save_Video/src/: main.cpp  offlineVideo.h
Stereo Calibrate/: settings.xml
Stereo Calibrate/src/: CMakeLists.txt  main.cpp
Undistort_Mono/src/: CMakeLists.txt  main.cpp
Undistort_Stereo/src/: CMakeLists.txt  main.cpp
